<resources>
    <string name="app_name">Tracking the physical condition of cyclists</string>
    <string name="menu_login">Log in</string>
    <string name="menu_signup">Sign up</string>
    <string name="menu_teams">Teams</string>
    <string name="menu_chats">Chats</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_training">Trainings</string>
    <string name="login">Login</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="email">E-mail</string>
    <string name="team_type">Team type</string>
    <string name="team_name">Team name</string>
    <string name="team_id">Team id</string>
    <string name="enter_team">Enter team</string>
    <string name="create_team">Create team</string>
    <string name="role">Role</string>
    <string name="birth_date">Birth date</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="gender">Gender</string>
    <string name="trainer">Trainer</string>
    <string name="cyclist">Cyclist</string>
    <string name="doctor">Doctor</string>
    <string name="soigneur">Soigneur</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="save_changes">Save changes</string>
    <string name="training">Training</string>
    <string name="training_goals">Training goals</string>
    <string name="current_training">Current training</string>
    <string name="start_datetime">Start date and time</string>
    <string name="end_datetime">End date and time</string>
    <string name="pulse">Pulse</string>
    <string name="speed">Speed</string>
    <string name="chats">Chats</string>
    <string name="send">Send</string>
    <string name="team">Team</string>
    <string name="send_message">Send message</string>
    <string name="text">Text</string>
    <string name="open_chat">Open chat</string>
    <string name="teams_rating">Team rating</string>
    <string name="create">Create</string>
    <string name="remove">Remove</string>
</resources>