<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="415dp"
        android:layout_height="803dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:weightSum="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FEF4CE"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ua" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="260dp"
                android:layout_height="95dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/app_name"
                android:textColor="#473F34"
                android:textSize="22dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:gravity="center"
                android:text="@string/menu_profile"
                android:textColor="#454444"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/login"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textColorHint="#808080"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textColorHint="#808080"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textColorHint="#808080"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextBirthDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/birth_date"
                android:inputType="date"
                android:textColor="#000000"
                android:textColorHint="#808080"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/height"
                android:inputType="number"
                android:textColor="#000000"
                android:textColorHint="#808080"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:ems="10"
                android:hint="@string/weight"
                android:inputType="number"
                android:textColor="#000000"
                android:textColorHint="#808080"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:text="@string/role"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:text="@string/gender"
                android:textColor="#000000" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#ABDDC1"
                android:text="@string/save_changes"
                android:textSize="22dp" />

        </LinearLayout>


    </LinearLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="410dp"
        android:layout_height="68dp"
        android:background="#87846F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/navigation_items" />

</androidx.constraintlayout.widget.ConstraintLayout>