<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="415dp"
        android:layout_height="803dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:weightSum="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FEF4CE"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="ua"
                android:textColor="@android:color/transparent"
                android:textSize="1sp" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="58dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ua" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="260dp"
                android:layout_height="95dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/app_name"
                android:textColor="#473F34"
                android:textSize="22dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/menu_signup"
                android:textColor="#454444"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/editTextLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/login"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textColorHint="#808080"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:freezesText="false"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:password="true"
                android:textColor="#000000"
                android:textColorHint="#808080"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextRepeatedPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/repeat_password"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textColorHint="#808080"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textColorHint="#808080"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textColorHint="#808080"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textColorHint="#808080"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/role"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <Switch
                    android:id="@+id/switch3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/trainer"
                    android:textColor="#676767" />

                <Switch
                    android:id="@+id/switch4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cyclist"
                    android:textColor="#676767" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/enter_team"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editTeamId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/team_id"
                    android:inputType="number"
                    android:textColor="#000000"
                    android:textColorHint="#808080"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/switch2"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/team_name"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editTextTeamName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/team_name"
                    android:inputType="textPersonName"
                    android:textColor="#000000"
                    android:textColorHint="#808080"
                    android:textSize="16sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/editTextBirthDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/birth_date"
                android:inputType="date"
                android:textColor="#000000"
                android:textColorHint="#808080"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/height"
                android:inputType="number"
                android:textColor="#000000"
                android:textColorHint="#808080"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:ems="10"
                android:hint="@string/weight"
                android:inputType="number"
                android:textColor="#000000"
                android:textColorHint="#808080"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/switchFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/female"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <Switch
                    android:id="@+id/switchMale"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:text="@string/male"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </LinearLayout>

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#ABDDC1"
                android:text="@string/menu_signup"
                android:textSize="22dp" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>